2007-11-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/fgtk.py (FComboBox._get_column_content): Mark as private
	(FComboBox.__len__) Remove,
	Reorganize method order

	* data/glade/videotest.glade:
	* data/glade/wizard_audiotest.glade:
	* data/glade/wizard_disk.glade:
	* data/glade/wizard_firewire.glade:
	* data/glade/wizard_license.glade:
	* data/glade/wizard_soundcard.glade:
	* data/glade/wizard_source.glade:
	* data/glade/wizard_testsource.glade:
	* data/glade/wizard_tvcard.glade:
	* data/glade/wizard_webcam.glade:
	Remove all static ComboBox item strings, they are overwritten by the
	enums later anyway.
	
	* flumotion/common/enum.py:
	* flumotion/wizard/enums.py:
	Mark strings that should be translatable as such.
	Use lists instead of tuples for elements of the same kind,
	reorganize to make it a bit more readable
	
	* po/sv.po:
	Update swedish translation

2007-11-28  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_audiotest.glade:
	* data/glade/wizard_disk.glade:
	* data/glade/wizard_encoding.glade:
	* data/glade/wizard_http.glade:
	* data/glade/wizard_jpeg.glade:
	* data/glade/wizard_shout2.glade:
	* data/glade/wizard_smoke.glade:
	* data/glade/wizard_soundcard.glade:
	* data/glade/wizard_source.glade:
	* data/glade/wizard_testsource.glade:
	Set label/checkbutton alignments, table width,
	do not expand port spinbuttons
	
	* po/sv.po: Update swedish translation

2007-11-28  Michael Smith <msmith@fluendo.com>

	* flumotion/component/combiners/switch/switch.py:
	  First steps towards making switch work again (it still doesn't work, but
	  some bits are cleaned up?)

2007-11-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py (WebcamStep._run_checks.errback): 
	Get rid of a defer generator method

2007-11-27  Andy Wingo  <wingo@pobox.com>

	* flumotion.doap: Update for release.

	* configure.ac: Back to dev, again

=== release 0.5.1 ===

2007-11-27  Andy Wingo  <wingo@pobox.com>

	* NEWS:
	* RELEASE: